--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div class="heading"></div>
+    <div class="heading">
+        <h1>Simple Tik Tac Toe game</h1>
+    </div>
     <div class="game-container">
-        <div class="display"></div>
-        <div class="board"></div>
+        <div class="display">
+        </div>
+        
+        <div class="board">
+            
+            <div index="0" class="cell"></div>
+            <div index="1" class="cell"></div>
+            <div index="2" class="cell"></div>
+            <div index="3" class="cell"></div>
+            <div index="4" class="cell"></div>
+            <div index="5" class="cell"></div>
+            <div index="6" class="cell"></div>
+            <div index="7" class="cell"></div>
+            <div index="8" class="cell"></div>
+        </div>
     </div>
     <div class="footer"></div>
 </body>
