--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
         
         <div class="board">
             
-            <div index="0" class="cell"></div>
-            <div index="1" class="cell"></div>
-            <div index="2" class="cell"></div>
-            <div index="3" class="cell"></div>
-            <div index="4" class="cell"></div>
-            <div index="5" class="cell"></div>
-            <div index="6" class="cell"></div>
-            <div index="7" class="cell"></div>
-            <div index="8" class="cell"></div>
+            <div data-value="0" class="cell"></div>
+            <div data-value="1" class="cell"></div>
+            <div data-value="2" class="cell"></div>
+            <div data-value="3" class="cell"></div>
+            <div data-value="4" class="cell"></div>
+            <div data-value="5" class="cell"></div>
+            <div data-value="6" class="cell"></div>
+            <div data-value="7" class="cell"></div>
+            <div data-value="8" class="cell"></div>
         </div>
+    </div>
+    <div class="game-over">
+        <span class="game-over-text"></span>
+        <button class="restart">Restart</button>
     </div>
     <div class="footer"></div>
 </body>
